Fix: always align h1..h6 to the left
This makes the look&feel a lot more consistent. Some pages have
a <center> around h1..h6 to force a centered look.

--- a/static/css/truewiki.css
+++ b/static/css/truewiki.css
@@ -153,11 +153,11 @@ dd {
 h1, h2, h3, h4, h5, h6 {
     border-bottom: 1px solid #aaa;
     font-weight: normal;
-    margin-bottom: 5px;
-    margin: 0;
+    margin: 0 0 5px 0;
     overflow: hidden;
     padding-bottom: 0px;
     padding-top: 32px;
+    text-align: left;
     text-decoration: none;
     width: auto;
 }
